Certifications page updated, News updated, CMDC updates

--- a/certification.html
+++ b/certification.html
@@ -94,7 +94,116 @@
 
 	<p><strong>Certification</strong></p>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Coming soon.</div></font>
+	<div align="left" style="font-size:50%">Harmonious Platform Systems operates an internal certification program for software where certificiation is 
+	provided based on our internal assessment of usability, reliability and security.<br>
+	<br>
+	We can only certify a small selection of software. However, if specific software is not certified for the Harmonious Platform it does not mean it is 
+	incompatible or that we do not support its use with the platform. It simply means that we have not yet performed the required amount of testing for 
+	it to be certified and officially endorsed by Harmonious Platform Systems.</div>
+<br>
+	<p style="border:3px; border-style:solid; border-color:red; padding:1em; font-size:50%;">
+	<b>Pending:</b><br>
+	&#10007; Fedora 36 Workstation
+	<br>
+	&#10007; OpenSUSE Leap 15.4
+	</p>
+<br>
+
+	<p style="border:3px; border-style:solid; border-color:orange; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Ubuntu 22.04 (Linux)</b><br>
+	<br>
+	<img src="images/Ubuntu_logo.png"><br>
+	<br>
+	Version: 22.04 LTS
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop/Server<br>
+	<br>
+	Ubuntu 22.04 is certified for use with Harmonious Platform Systems, on the desktop and the server.<br>
+	<br>
+	<a href="https://www.ubuntu.com/">www.ubuntu.com</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:orange; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Ubuntu 20.04 (Linux)</b><br>
+	<br>
+	<img src="images/Ubuntu_logo.png"><br>
+	<br>
+	Version: 20.04.4 LTS
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop/Server<br>
+	<br>
+	Ubuntu 20.04 is certified for use with Harmonious Platform Systems, on the desktop and the server.<br>
+	<br>
+	<a href="https://www.ubuntu.com/">www.ubuntu.com</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:lightblue; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Fedora 35 (Linux)</b><br>
+	<br>
+	<img src="images/Fedora_logo.png"><br>
+	<br>
+	Version: 35
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Workstation<br>
+	<br>
+	Fedora 35 is certified for use with Harmonious Platform Systems, on the workstation.<br>
+	<br>
+	<a href="https://getfedora.org/en/workstation/">https://getfedora.org/en/workstation/</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:cyan; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Tumbleweed (Linux)</b><br>
+	<br>
+	<img src="images/Tumbleweed_logo.png"><br>
+	<br>
+	Version: Rolling distribution
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop/Server<br>
+	<br>
+	Tumbleweed is certified for use with Harmonious Platform Systems, on the desktop and the server.<br>
+	<br>
+	<a href="https://get.opensuse.org/tumbleweed/">https://get.opensuse.org/tumbleweed/</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:darkblue; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Microsoft Windows Server</b><br>
+	<br>
+	<img src="images/Windows_Server_logo.png"><br>
+	<br>
+	Version: All versions
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Server<br>
+	<br>
+	Microsoft Windows Server is certified for use with Harmonious Platform Systems, on the server.<br>
+	<br>
+	<a href="https://www.microsoft.com/en-au/windows-server">https://www.microsoft.com/en-au/windows-server</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:blue; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Microsoft Windows 11</b><br>
+	<br>
+	<img src="images/Windows_11_logo.png"><br>
+	<br>
+	Version: 11
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop<br>
+	<br>
+	Microsoft Windows 11 is certified for use with Harmonious Platform Systems, on the desktop.<br>
+	<br>
+	<a href="https://www.microsoft.com/en-au/windows">https://www.microsoft.com/en-au/windows</a>
+	</p>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
