--- a/cmdc.html
+++ b/cmdc.html
@@ -158,12 +158,12 @@ cursor: pointer;
 <br>
 	<img src="images/cmdc-icon-128px.png" alt="cmdc-logo" width="64" height="64">
 
-	<font color="gold"><div align="left" style="font-size:50%">CMDC is an acronym for <b>Centrally Managed Digital Currency</b> and is stylized as 
+	<font color="gold"><div align="left" style="font-size:50%">CMDC is the acronym for <b>Centrally Managed Digital Currency</b> and is stylized as 
 	<b>$CMDC</b>.</div></font><br>
 	
 	<font color="gold"><div align="left" style="font-size:50%">It is a prototype digital currency and asset class with a specification which pegs $CMDC to a 
-	defined existing currency to determine its value. Due to the way it has been developed, it is inherently flawed. The original value rate was proposed to 
-	be 1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
+	defined existing currency to determine its value. Due to the way it was developed, it was inherently flawed. The original value rate was proposed to be 
+	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
 	The value rate is now 1:2500.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
@@ -184,12 +184,10 @@ cursor: pointer;
 	We are still developing software which enables selling and trading. CMDC operates on our private blockchain, called Gobble Chain. In March 2022 it received 
 	its first major upgrade to version 2.0.</div></font><br>
 
-	<font color="gold"><div align="left" style="font-size:50%">In April 2022 we introduced three tokens - Cicada 3301 Community Token, Power8 Token and TideIn 
-	Token. Token options are fully compatible and integrated with CMDC and Gobble Chain. Token options are mined and refined similar to regular CMDC block sets, 
-	but have multiple layers of encryption, use a different verification method to include a unique tokenID and are valued different. Tokens are also limited in 
-	supply. The underlying technology of tokens is technically valued at an equivalent $CMDC 40,000,000,000. Tokens are a much more accessible way to access $CMDC 
-	at a much lower cost, but are limited in supply. The value of each token option is mathematically determined by the number of tokens in circulation compared to 
-	the number of tokens in supply.</div></font><br>
+	<font color="gold"><div align="left" style="font-size:50%">April 2022, we introduced three new tokens - Cicada 3301 Community Token, Power8 Token and TideIn 
+	Token. Token options are now fully integrated into CMDC and Gobble Chain. Token options are mined and refined through a similar process to regular CMDC block 
+	sets, but have multiple layers of encryption, use a different verification method to include a unique tokenID and are valued differently. Tokens are limited 
+	in supply.</div></font><br>
 
 	<font color="gold"><div align="left" style="font-size:50%">A new area of development focus will include integrating support for 
 	<!-- do not use tab in front of <span>. keep level with line start -->
@@ -223,16 +221,16 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 	<strong>GOBBLE CHAIN SNAPSHOTS</strong></a></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,987,312,500</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 160,000,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 190,000,000,000</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:CICADA] Issue 1 token supply: 5/100</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:CICADA] Issue 1 token supply: 6/100</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:POWER8] Issue 1 token supply: 1/25</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>[Index:TIDEIN] Issue 1 token supply: 1/50</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 12,687,500</strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
-	<font color="gold"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation: $US 464,000,000</strong></div></font>
+	<font color="gold"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation (excluding tokens): $US 476,000,000</strong></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
 	<font color="gold"><div align="left" style="font-size:60%"><strong><em>[Index:CICADA] Cicada 3301 Community Token</em> 
