--- a/index.html
+++ b/index.html
@@ -190,6 +190,25 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>April 28, 2022</b><br>
+	<br>
+	We have updated the Certification page.
+	<br>
+	Our internal certification program is now fully operational.
+	<br>
+	Initial certified software includes:
+	<br>
+	- Ubuntu 22.04 LTS<br>
+	- Ubuntu 20.04 LTS<br>
+	- Fedora 35<br>
+	- Tumbleweed<br>
+	- Windows Server<br>
+	- Windows 11<br>
+	Upcoming releases of Fedora 36 and OpenSUSE Leap 15.4 are pending and will be assessed post-release.
+	</em>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>March 25, 2022</b><br>
 	<br>
 	We have added two new Gateways and viADDR databases which are acting parents to a new sub-hub configuration.
@@ -304,9 +323,9 @@
 	Harmonious Platform Systems now officially supports:<br>
 	- Tumbleweed<br>
 	- Ubuntu 21.04<br>
-	- Fedora Linux 35<br>
+	- Fedora 35<br>
 	- Windows 11<br>
-	</ul></em>
+	</em>
 	</p>
 	
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
