Updated home page news and Certification update

--- a/certification.html
+++ b/certification.html
@@ -138,7 +138,7 @@
 	<br>
 	Ubuntu 20.04 is certified for use with Harmonious Platform Systems, on the desktop and the server.<br>
 	<br>
-	<a href="https://www.ubuntu.com/">www.ubuntu.com</a>
+	<a href="https://www.ubuntu.com">www.ubuntu.com</a>
 	</p>
 
 	<p style="border:3px; border-style:solid; border-color:lightblue; padding:1em; font-size:50%;">
@@ -154,7 +154,7 @@
 	<br>
 	Fedora 35 is certified for use with Harmonious Platform Systems, on the workstation.<br>
 	<br>
-	<a href="https://getfedora.org/en/workstation/">https://getfedora.org/en/workstation/</a>
+	<a href="https://getfedora.org/en/workstation">https://getfedora.org/en/workstation</a>
 	</p>
 
 	<p style="border:3px; border-style:solid; border-color:cyan; padding:1em; font-size:50%;">
@@ -170,7 +170,7 @@
 	<br>
 	Tumbleweed is certified for use with Harmonious Platform Systems, on the desktop and the server.<br>
 	<br>
-	<a href="https://get.opensuse.org/tumbleweed/">https://get.opensuse.org/tumbleweed/</a>
+	<a href="https://get.opensuse.org/tumbleweed">https://get.opensuse.org/tumbleweed</a>
 	</p>
 
 	<p style="border:3px; border-style:solid; border-color:darkblue; padding:1em; font-size:50%;">
@@ -203,6 +203,22 @@
 	Microsoft Windows 11 is certified for use with Harmonious Platform Systems, on the desktop.<br>
 	<br>
 	<a href="https://www.microsoft.com/en-au/windows">https://www.microsoft.com/en-au/windows</a>
+	</p>
+
+	<p style="border:3px; border-style:solid; border-color:darkred; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | IPFire</b><br>
+	<br>
+	<img src="images/IPFire_logo.png"><br>
+	<br>
+	Version: 2.27 (Core Update 167)
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Server/Virtual Server<br>
+	<br>
+	IPFire is certified for use with Harmonious Platform Systems, on the server and virtual server.<br>
+	<br>
+	<a href="https://www.ipfire.org">https://www.ipfire.org</a>
 	</p>
 
 <br>
