--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>April 30, 2022</b><br>
+	<br>
+	IPFire has been certified for use with Harmonious Platform Systems.
+	</em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>April 28, 2022</b><br>
 	<br>
 	We have updated the Certification page.
