--- a/certification.html
+++ b/certification.html
@@ -106,6 +106,10 @@
 	&#10007; Fedora 36 Workstation
 	<br>
 	&#10007; OpenSUSE Leap 15.4
+	<br>
+	&#10007; pfSense
+	<br>
+	&#10007; ZeroShell
 	</p>
 <br>
 
