--- a/components.html
+++ b/components.html
@@ -206,10 +206,10 @@
 
 <hr style="border: 1px solid gold;" />
 
-	<font color="gold"><div align="left" style="font-size:50%"><b>Harmonious Access Browser</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b><s>Harmonious Access Browser</s></b></div></font>
 
-	<font color="gold"><div align="left" style="font-size:50%">Web browser configured specifically to function with Harmonious 
-	Platform.</div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><s>Web browser configured specifically to function with Harmonious 
+	Platform.</s></div></font>
 
 <hr style="border: 1px solid gold;" />
 
