--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 	</strong></div></font>
 	<hr style="border: 1px solid gold;" />
 
+		<!-- slackware logo , because we can -->
+	<a href="http://www.slackware.com/"><img src="images/slackware-logo.jpg" height="32" style="border:1px solid white"></a>
+
 		<!-- sub-menu, only to be used on index page -->
 	<font color="gold"><div align="right" style="font-size:50%"><strong>MORE</strong></div></font>
 	<font color="gold"><div align="right" style="font-size:50%"><strong>&#8595;</strong></div></font>
@@ -164,7 +167,7 @@
 	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Domain Structuring</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Global Virtual Office</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Session Authentication</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b>Harmonious Access Browser</b></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><b><s>Harmonious Access Browser</s></b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Message Board</b></div></font><br>
 <!-- br -->
 	<font color="gold"><div align="left" style="font-size:40%"><i>*Harmonious Platform is prototype and under active development
@@ -189,6 +192,24 @@
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>May 15, 2022</b><br>
+	<br>
+	We are currently reviewing the "Harmonious Access Browser" component of the specification.
+	<br>
+	We had plans to ship a custom web browser with modifications made specifically to suit the Harmonious Platform.
+	<br>
+	However, after much consideration we have decided that shipping a custom browser is both unnecessary and negated by the fact that 
+	good web browsers already exist that already function well with Harmonious Platform.
+	<br>
+	In place of shipping a custom web browser, we'd like to endorse an existing web browser and certify it's compatibility with 
+	Harmonious Platform.
+	<br>
+	We have not yet finalized which web browser we will certify, but both Mozilla Firefox and Brave Browser remain the two most likely 
+	candidates.
+	</em>
+	</p>
+	
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>April 30, 2022</b><br>
 	<br>
@@ -383,6 +404,7 @@
 	</div></font>
 		<!-- post images -->
 	<center>
+	<img src="images/squid-logo.png" alt="squid-logo" width="64" height="64"> 
 	<img src="images/apache-logo.png" alt="apache-logo" width="64" height="64"> 
 	<img src="images/lamp-logo.png" alt="lamp-logo" width="64" height="64"> 
 	<img src="images/php-logo.png" alt="php-logo" width="64" height="64"> 
