--- a/progress.html
+++ b/progress.html
@@ -117,7 +117,7 @@
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Watchtower</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="25" max="100"> 25% </progress></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Soul</b></label></div></font>
+		<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Soul</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="100" max="100"> 100% </progress></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>KEEP UP!</b></label></div></font>
@@ -141,8 +141,8 @@
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>viADDR Database</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="25" max="100"> 25% </progress></div></font>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Harmonious Access Browser</b></label></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="50" max="100"> 50% </progress></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b><s>Harmonious Access Browser</s></b></label></div></font>
+	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="0" max="100"> 00% </progress></div></font>
 <br>
 	<font color="gold"><div align="left" style="font-size:50%"><label for="dev"><b>Internal Message Board</b></label></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><progress id="dev" value="75" max="100"> 75% </progress></div></font><br>
