--- a/pricing.html
+++ b/pricing.html
@@ -15,6 +15,17 @@
 .main {
   font-size: 24px;
 }
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 </style>
 </head>
 
@@ -94,7 +105,70 @@
 
 	<p><strong>Pricing</strong></p>
 <br>
-	<font color="gold"><div align="left" style="font-size:50%">Coming soon.</div></font>
+	<font color="gold"><div style="font-size:60%">
+	
+	<p><strong>Harmonious Platform Access</strong></p>	
+
+	<center>
+		<div class="row">
+			<div class="column" style="background-color:green;"><strong><br>LEVEL 1 - GREEN</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+
+			<div class="column" style="background-color:blue;"><strong><br>LEVEL 2 - BLUE</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+			
+			<div class="column" style="background-color:red;"><strong><br>LEVEL 3 - RED</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+		</div>
+	</center>
+
+<br>
+
+	<p><strong>Data Management Services (with partners)</strong></p>
+
+	<center>
+		<div class="row">
+			<div class="column" style="background-color:green;"><strong><br>LEVEL 1 - GREEN</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+
+			<div class="column" style="background-color:blue;"><strong><br>LEVEL 2 - BLUE</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+			
+			<div class="column" style="background-color:red;"><strong><br>LEVEL 3 - RED</strong><br>
+			<br>
+			Coming soon.<br>
+			<br>
+			<strong>Price: Contact for more information.</strong><br>
+			<br>
+			</div>
+		</div>
+	</center>
+	</div></font>
 
 <br>
 	<div align="right" style="font-size:40%">------------------------------</div>
