--- a/certification.html
+++ b/certification.html
@@ -115,6 +115,22 @@
 	</p>
 <br>
 
+	<p style="border:3px; border-style:solid; border-color:#45a1ff; padding:1em; font-size:50%;">
+	<b>&#10003; Certified | Mozilla Firefox</b><br>
+	<br>
+	<img src="images/Mozilla-Firefox_logo.png"><br>
+	<br>
+	Version: 100+
+	<br>
+	Architecture: 64bit
+	<br>
+	Platform: Desktop/Workstation<br>
+	<br>
+	Mozilla Firefox is certified for use with Harmonious Platform Systems, on the desktop and the workstation.<br>
+	<br>
+	<a href="https://www.mozilla.org/en-US/firefox/">www.mozilla.org/en-US/firefox</a>
+	</p>
+
 	<p style="border:3px; border-style:solid; border-color:orange; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Ubuntu 22.04 (Linux)</b><br>
 	<br>
