--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@
 	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Domain Structuring</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Global Virtual Office</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Session Authentication</b></div></font>
-	<font color="gold"><div align="left" style="font-size:50%"><b><s>Harmonious Access Browser</s></b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Internal Message Board</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Full Support for CMDC Ecosystem</b></div></font>
 	<font color="gold"><div align="left" style="font-size:50%"><b>Seamless Gobble Blockchain Integration</b></div></font><br>
@@ -227,6 +226,32 @@
 	Throughout its development, Harmonious Platform has proven stable and robust against system failure.</div></font><br>
 <br>
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
+
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>June 14, 2022</b><br>
+	<br>
+	Mozilla Firefox has been certified for use with Harmonious Platform Systems.
+	<br>
+	The two candidates for certification were Mozilla Firefox and Brave Browser.
+	<br>
+	This was a challenging decision for us, considering both candidates are respectable web browsers.
+	<br>
+	Mozilla Firefox has been certified over Brave Browser on the basis that we feel Mozilla, through Firefox and as an organization, 
+	is more dedicated to the freedom movement than what Brave Browser is.
+	<br>
+	This is no way negates any efforts that Brave Browser has made and continues to make, especially with its focus on security and 
+	privacy, but we feel their intentions are more focused towards improving their own products and services rather than the freedom 
+	movement as a whole.
+	<br>
+	We actually considered certifying both candidates, however, we definitely feel more work needs to be done with Brave Browser to 
+	reach the point where we are completely satisfied it can be certified for use with Harmonious Platform Systems.
+	<br>
+	Because we have not yet reached that point of satisfaction, Brave Browser will not be certified at this time.
+	<br>
+	We will continue to monitor the development progress of Brave Browser and if significant improvements are made we are open to 
+	certify its use in the future.
+	</em>
+	</p>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>May 15, 2022</b><br>
@@ -440,6 +465,8 @@
 	</div></font>
 		<!-- post images -->
 	<center>
+	<img src="images/Mozilla-Firefox_logo.png" alt="mozilla-firefox-logo" height="48">
+	<br>
 	<img src="images/squid-logo.png" alt="squid-logo" width="64" height="64"> 
 	<img src="images/apache-logo.png" alt="apache-logo" width="64" height="64"> 
 	<img src="images/lamp-logo.png" alt="lamp-logo" width="64" height="64"> 
