Bug fixes, plus new CMDC page design

--- a/index.html
+++ b/index.html
@@ -465,25 +465,24 @@
 	</div></font>
 		<!-- post images -->
 	<center>
-	<img src="images/Mozilla-Firefox_logo.png" alt="mozilla-firefox-logo" height="48">
-	<br>
-	<img src="images/squid-logo.png" alt="squid-logo" width="64" height="64"> 
-	<img src="images/apache-logo.png" alt="apache-logo" width="64" height="64"> 
-	<img src="images/lamp-logo.png" alt="lamp-logo" width="64" height="64"> 
-	<img src="images/php-logo.png" alt="php-logo" width="64" height="64"> 
-	<img src="images/python-logo.png" alt="python-logo" width="64" height="64"> 
-	<img src="images/perl-logo.png" alt="perl-logo" width="64" height="64"> 
-	<img src="images/gnu-logo.png" alt="gnu-logo" width="64" height="64"> 
-	<img src="images/linux-logo.png" alt="linux-logo" width="64" height="64"> 
-	<img src="images/tumbleweed-logo.png" alt="tumbleweed-logo" width="64" height="64"> 
-	<img src="images/ubuntu-logo.png" alt="ubuntu-logo" width="64" height="64"> 
-	<img src="images/ibm-logo.png" alt="ibm-logo" width="64" height="64"> 
-	<img src="images/redhat-logo.png" alt="redhat-logo" width="64" height="64"> 
-	<img src="images/fedora-logo.png" alt="fedora-logo" width="64" height="64"> 
-	<img src="images/win32-logo.png" alt="win32-logo" width="64" height="64"> 
-	<img src="images/bsd-logo.png" alt="bsd-logo" width="64" height="64"> 
-	<img src="images/netbsd-logo.png" alt="netbsd-logo" width="64" height="64"> 
-	<img src="images/openbsd-logo.png" alt="openbsd-logo" width="64" height="64">
+	<img src="images/squid-logo.png" alt="squid-logo" width="56" height="56"> 
+	<img src="images/apache-logo.png" alt="apache-logo" width="56" height="56"> 
+	<img src="images/lamp-logo.png" alt="lamp-logo" width="56" height="56"> 
+	<img src="images/php-logo.png" alt="php-logo" width="56" height="56"> 
+	<img src="images/python-logo.png" alt="python-logo" width="56" height="56"> 
+	<img src="images/perl-logo.png" alt="perl-logo" width="56" height="56"> 
+	<img src="images/mozilla-firefox_logo.png" alt="mozilla-firefox-logo" width="56" height="56"> 
+	<img src="images/gnu-logo.png" alt="gnu-logo" width="56" height="56"> 
+	<img src="images/linux-logo.png" alt="linux-logo" width="56" height="56"> 
+	<img src="images/tumbleweed-logo.png" alt="tumbleweed-logo" width="56" height="56"> 
+	<img src="images/ubuntu-logo.png" alt="ubuntu-logo" width="56" height="56"> 
+	<img src="images/ibm-logo.png" alt="ibm-logo" width="56" height="56"> 
+	<img src="images/redhat-logo.png" alt="redhat-logo" width="56" height="56"> 
+	<img src="images/fedora-logo.png" alt="fedora-logo" width="56" height="56"> 
+	<img src="images/win32-logo.png" alt="win32-logo" width="56" height="56"> 
+	<img src="images/bsd-logo.png" alt="bsd-logo" width="56" height="56"> 
+	<img src="images/netbsd-logo.png" alt="netbsd-logo" width="56" height="56"> 
+	<img src="images/openbsd-logo.png" alt="openbsd-logo" width="56" height="56">
 	</center>
 	<br>
 <br>
