--- a/certification.html
+++ b/certification.html
@@ -115,10 +115,10 @@
 	</p>
 <br>
 
-	<p style="border:3px; border-style:solid; border-color:#45a1ff; padding:1em; font-size:50%;">
+	<p style="border:3px; border-style:solid; border-color:purple; padding:1em; font-size:50%;">
 	<b>&#10003; Certified | Mozilla Firefox</b><br>
 	<br>
-	<img src="images/Mozilla-Firefox_logo.png"><br>
+	<img src="images/Firefox_logo.png"><br>
 	<br>
 	Version: 100+
 	<br>
