--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 	<img src="images/php-logo.png" alt="php-logo" width="56" height="56"> 
 	<img src="images/python-logo.png" alt="python-logo" width="56" height="56"> 
 	<img src="images/perl-logo.png" alt="perl-logo" width="56" height="56"> 
-	<img src="images/mozilla-firefox_logo.png" alt="mozilla-firefox-logo" width="56" height="56"> 
+	<img src="images/mozilla-logo.png" alt="mozilla-logo" width="56" height="56"> 
 	<img src="images/gnu-logo.png" alt="gnu-logo" width="56" height="56"> 
 	<img src="images/linux-logo.png" alt="linux-logo" width="56" height="56"> 
 	<img src="images/tumbleweed-logo.png" alt="tumbleweed-logo" width="56" height="56"> 
