Updated CMDC, plus page edits to reflect StarBlock Credits title

--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -9,7 +9,7 @@
 <head>
 <meta name="robots" content="noindex">
 
-<title>Harmonious Platform Systems - CMDC</title>
+<title>StarBlock Credits - CMDC</title>
 
 <style>
   body
@@ -194,11 +194,9 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 	<font color="black"><div align="left" style="font-size:75%"><a href="https://drive.google.com/file/d/1Mbc2ShKMFHIGu7kSsa7q_rV0kFsr45Zk/view?usp=sharing" style="color:black; text-decoration:none";>
 			<strong>SOCIAL DISTRIBUTION VAULT #1 ></strong></a></div></font>
 
-	<font color="black"><div align="left" style="font-size:75%"><a href="https://www.dropbox.com/sh/8j5irb5u2jnsx4l/AAC6Foju7xCFPo2uIJMysUhva?dl=0" style="color:black; text-decoration:none";>
-			<strong>GOBBLE CHAIN SNAPSHOTS ></strong></a></div></font>
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,987,312,500</strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 430,000,000,000</strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 510,000,000,000</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>[Index:CICADA] Issue 1 token supply: 10/100</strong></div></font>
@@ -207,7 +205,7 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 12,687,500</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation (excluding tokens): $US 572,000,000</strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong>[Theoretical] Valuation (excluding tokens): $US 604,000,000</strong></div></font>
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Token options: </strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong><em>[Index:CICADA] Cicada 3301 Community Token</em> 
