--- a/index.html
+++ b/index.html
@@ -228,6 +228,48 @@
 	<font color="gold"><div <span property="cc:attributionName" style="font-size:50%"><b><u>News</u></b></div></font>
 
 	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
+	<em><b>June 24, 2022</b><br>
+	<br>
+	We have successfully upgraded Gobble Chain to version 3.0.
+	<br>
+	This was not anticipated and come as a result of some very unexpected circumstances.
+	<br>
+	Late yesterday the blockchain crashed because of technical reasons that were unforeseen and of which we never developed for.
+	<br>
+	We had recently introduced a new backup mechanism which duplicated the current running blockchain into an archive of its own.
+	<br>
+	Initially things looked promising but we seriously misjudged just how quickly the running blockchain grows and equally misjudged how 
+	quickly disk space would be consumed by duplicating it for archival, without any compression.
+	<br>
+	It was primarily the lack of disk storage space on the server which caused the entire blockchain to stop functioning and effectively 
+	break.
+	<br>
+	It was an oversight which we readily admit should not have happened and that is on us.
+	<br>
+	This morning we were forced to dump version 2.0 entirely and quickly adopt version 3.0, and make some necessary changes to see it 
+	implemented with confidence.
+	<br>
+	It has been a complete success.
+	<br>
+	Version 3.0 of Gobble Chain replicates the exact same behavior as its predecessor, but with some critical modifications.
+	<br>
+	The amount of disk space its predecessor consumed had become unmanageable for the resources that we have and to be honest, it was just 
+	unnecessarily bloated by design - something we never understood, until yesterday.
+	<br>
+	Version 3.0 introduces a much leaner design, functions much lighter by using a half-load data addition model to the blockchain while using 
+	less system resources, consumes so much less disk space and introduces a brand new compressed archival feature.
+	<br>
+	The new blockchain is now operational and running successfully.
+	<br>
+	The changes have no effect on current investments of CMDC and its values, which all remains unchanged by the implementation of this new 
+	version.
+	<br>
+	So, as we said, this update comes much earlier than we anticipated, but we were presented with an immediate challenge and are proud of 
+	what we have been able to do to meet that challenge.
+	</em>
+	</p>
+	
+	<p style="border:3px; border-style:solid; border-color:gold; padding:1em; font-size:50%;">
 	<em><b>June 14, 2022</b><br>
 	<br>
 	Mozilla Firefox has been certified for use with Harmonious Platform Systems.
