--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -175,6 +175,8 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 	which will be applicable to original creations in the forms of digital images, photos, audio, video and other digital artwork creations, which can be sold as NFT by 
 	rights holders and bought using CMDC. The proof of rights and the transaction will be integrated into Gobble Chain.</div></font><br>
 
+	<font color="black"><div align="left" style="font-size:50%"><strong><em>Current version: 3.0</em></strong></div></font><br>
+
 		<center>
 			<button class="button button1"><b><a href="https://forms.office.com/r/8kxTWxtvch" 
 						style="color:black; text-decoration:none";>APPLY FOR TRANSACTION ID</a></b></button>
