Updated CMDC figures, plus other misc updates

--- a/starblock-credits/index.html
+++ b/starblock-credits/index.html
@@ -138,10 +138,10 @@ cursor: pointer;
 	<font color="black"><div align="left" style="font-size:50%">CMDC is the acronym for <b>Centrally Managed Digital Currency</b> and is stylized as 
 	<b>$CMDC</b>.</div></font><br>
 	
-	<font color="black"><div align="left" style="font-size:50%">It is a prototype digital currency and asset class with a specification which pegs $CMDC to a 
-	defined existing currency to determine its value. Due to the way it was developed, it was inherently flawed. The original value rate was proposed to be 
-	1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process have now altered the original rate. 
-	The value rate is now 1:2500.</div></font><br>
+	<font color="black"><div align="left" style="font-size:50%">The framework for CMDC was started in 2020. It is a prototype digital currency and asset 
+	class with a specification which pegs CMDC to a defined existing currency to determine its value. Due to the way it was developed, it was inherently flawed. 
+	The original value rate was proposed to be 1:1.25. For example, 1 US dollar would equate to 1.25 CMDC. However, big development changes to the mining process 
+	have now altered the original rate. The value rate is now 1:2500.</div></font><br>
 
 	<font color="black"><div align="left" style="font-size:50%">Bitcoin is infamous for being energy and resource intensive during the mining process. Some 
 	analysts believe that its high rate of energy use could see its eventual demise. CMDC has been designed specifically to be light on system resources for 
@@ -198,12 +198,12 @@ Source: Wikipedia">[?]</span></b>, or NFTs.
 
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #1: $CMDC 999,987,312,500</strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 510,000,000,000</strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #2: $CMDC 550,000,000,000</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #3: $CMDC 0</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Social distribution vault #4: $CMDC 0</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>[Index:CICADA] Issue 1 token supply: 10/100</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>[Index:POWER8] Issue 1 token supply: 3/25</strong></div></font>
-	<font color="black"><div align="left" style="font-size:60%"><strong>[Index:TIDEIN] Issue 1 token supply: 5/50</strong></div></font>
+	<font color="black"><div align="left" style="font-size:60%"><strong>[Index:TIDEIN] Issue 1 token supply: 7/50</strong></div></font>
 <br>
 	<font color="black"><div align="left" style="font-size:60%"><strong>In circulation: $CMDC 12,687,500</strong></div></font>
 	<font color="black"><div align="left" style="font-size:60%"><strong>Value rate: 1:2500</strong></div></font>
